Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-30819

InnoDB fails to start up after downgrading from MariaDB 11.0

Details

    Description

      Downgrades are not supported, and in fact, a downgrade from MariaDB Server 10.8 or later to earlier versions is nontrivial due to MDEV-27199 and MDEV-14425.

      The error message that was added in MDEV-30106 may be confusing, and in fact, we can safely allow a downgrade, provided that the change buffering is never enabled.

      2023-03-09 13:54:30 0 [ERROR] InnoDB: The change buffer is corrupted
      2023-03-09 13:54:30 0 [ERROR] InnoDB: Plugin initialization aborted with error
      Data structure corruption
      2023-03-09 13:54:30 0 [Note] InnoDB: Starting shutdown...
      

      If innodb_change_buffering=none (the default since MDEV-27734), we can demote this error to a warning and allow InnoDB to start up.

      Attachments

        Issue Links

          Activity

            Transition Time In Source Status Execution Times
            Marko Mäkelä made transition -
            Open In Progress
            15m 1s 1
            Marko Mäkelä made transition -
            In Progress Closed
            1h 41m 1

            People

              marko Marko Mäkelä
              marko Marko Mäkelä
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.